# stanford_ws

./: JupyterServer.py  README.md
server/src/: createDanceActionListSample.py
src/command_launcher/: setup.py
src/command_launcher/.ipynb_checkpoints/: package-checkpoint.xml  setup-checkpoint.cfg
src/command_launcher/command_launcher/: a_old.py  command_launcher_node.py
src/command_launcher/launch/.ipynb_checkpoints/: command_launcher.launch-checkpoint.py
src/mini_pupper_ros/mini_pupper_bringup/launch/: bringup_with_stanford_controller.launch.py
src/mini_pupper_ros/mini_pupper_dance/: setup.py
src/mini_pupper_ros/mini_pupper_dance/launch/: new_dance.launch.py
src/mini_pupper_ros/mini_pupper_dance_js/: package.xml  setup.cfg  setup.py
src/mini_pupper_ros/mini_pupper_dance_js/.ipynb_checkpoints/: setup-checkpoint.py
src/mini_pupper_ros/mini_pupper_dance_js/launch/: dance1.launch.py
src/mini_pupper_ros/mini_pupper_dance_js/mini_pupper_dance_js/: mini_pupper_dance_js.py
src/mini_pupper_ros/mini_pupper_interfaces/: CMakeLists.txt
src/mini_pupper_ros/stanford_controller/: package.xml  setup.cfg  setup.py
src/mini_pupper_ros/stanford_controller/launch/: stanford_controller.launch.py
src/mini_pupper_ros/stanford_controller/stanford_controller/: State.py  Utilities.py  stanford_controller_node.py  twist_to_command_node.py
src/servo_toggle_client/: package.xml  setup.cfg  setup.py
src/servo_toggle_client/launch/: activate_servo.launch.py
src/servo_toggle_client/servo_toggle_client/: servo_toggle_client.py
(+13 files in other folders)
