<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>stanford_controller</name>
  <version>1.0.0</version>
  <description>Stanford controller</description>
  <maintainer email="fae@mangdang.net">MangDang</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>mini_pupper_interfaces</exec_depend>
  <exec_depend>transforms3d</exec_depend>
  <exec_depend>numpy</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
